testdata/baselines/reference/compiler/declareGlobalLuauStyle.types
//// [tests/cases/compiler/declareGlobalLuauStyle.tlua] ////

=== globals.d.tlua ===
declare version: string;
>version : string

declare limits: { min: number, max: number };
>limits : { min: number; max: number; }
>min : number
>max : number

=== main.tlua ===
local n: number = limits.min;
>n : number
>limits.min : number
>limits : { min: number; max: number; }
>min : number

local s: string = version;
>s : string
>version : string

version = "overwritten"; // error: constant
>version = "overwritten" : "overwritten"
>version : any
>"overwritten" : "overwritten"

limits = { min = 0, max = 1 }; // error: constant
>limits = { min = 0, max = 1 } : { min: number; max: number; }
>limits : any
>{ min = 0, max = 1 } : { min: number; max: number; }
>min : number
>0 : 0
>max : number
>1 : 1

local bad: boolean = version; // error: string not boolean
>bad : boolean
>version : string

